[Style] Fix collapsing border misalignment

--- a/src/styles/detail-view-tile.scss
+++ b/src/styles/detail-view-tile.scss
@@ -11,7 +11,7 @@
     margin-bottom: 0;
 
     header {
-      border: none;
+      border-bottom: 1px solid #00000000;
     }
   }
 
